testdata/baselines/reference/submodule/conformance/typedefTagExtraneousProperty.errors.txt
typedefTagExtraneousProperty.js(1,15): error TS2315: Type 'Object' is not generic.
typedefTagExtraneousProperty.js(1,21): error TS8020: JSDoc types can only be used inside documentation comments.


==== typedefTagExtraneousProperty.js (2 errors) ====
    /** @typedef {Object.<string,string>} Mmap
                  ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'Object' is not generic.
                        ~
!!! error TS8020: JSDoc types can only be used inside documentation comments.
     * @property {string} ignoreMe - should be ignored
     */
    
    /** @type {Mmap} */
    var y = { bye: "no" };
    y
    y.ignoreMe = "ok but just because of the index signature"
    y['hi'] = "yes"
    